--- a/style2.css
+++ b/style2.css
@@ -1,13 +1,43 @@
 #testDiv1 {
-  width: 35%;
+  width: 16%;
   font-size: 1em;
   padding: 1em;
-  margin: 2em;
+  margin: 1em;
+  float: left;
 }
 
 #testDiv2 {
-  width: 35%;
+  width: 54%;
   font-size: 1em;
   padding: 1em;
-  margin: 2em;
+  margin: 1em;
+  float: left;
+}
+
+#testDiv3 {
+  width: 16%;
+  font-size: 1em;
+  padding: 1em;
+  margin: 1em;
+  float: left;
+}
+
+#list1 {
+  list-style: none;
+  border: red solid 2px;
+  padding: 0px;
+}
+
+#list1 li{
+  border: black dashed 1px;
+  padding: 10px;
+  width: 200px;
+  margin: 20px;
+  display: inline-block;
+}
+
+#testDivPosition {
+  position: absolute;
+  right: 100px;
+  bottom: 0px;
 }
